<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">VogLog</string>

    <!-- Static String -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="exist_health_condition">Exist Health Condition</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="disconnect">Disconnect</string>

    <!-- Sensor String -->
    <string name="co">CO</string>
    <string name="so2">SO<small><sub>2</sub></small></string>
    <string name="no2">NO<sub>2</sub></string>
    <string name="o3">O<sub>3</sub></string>
    <string name="pm25">PM2.5</string>
    <string name="temperature">Temp</string>

    <!-- Sign In Activity -->
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <!-- Sign Up Activity -->
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="optional">Optional</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="respiratory_disease">Respiratory Disease</string>
    <string name="cardiovascular_disease">Cardiovascular Disease</string>
    <string name="sign_up_sign_in">Already a member? <u>Sign In</u></string>

    <!-- Menu String -->
    <string name="menu_real_time_data">RealTime Data</string>
    <string name="menu_sensor_information">Sensor Information</string>
    <string name="menu_map">Map</string>
    <string name="menu_previous_data">Previous Data</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_id_cancel">ID Cancel</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- Main Activity -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- Forgot Password Activity -->
    <string name="forgot_password_main">Reset Password</string>

    <!-- RealTime Data Fragment -->
    <string name="date">Date : </string>
    <string name="heart_rate">Heart Rate : </string>
    <string name="rr_interval">RR Interval : </string>

    <!-- Previous Data Fragment -->
    <string name="previous_data_main">Previous Data</string>
    <string name="currentSensor">Choose Sensor</string>
    <string-array name="sensors">
        <item>CO</item>
        <item>SO2</item>
        <item>NO2</item>
        <item>O3</item>
        <item>PM2.5</item>
    </string-array>

    <!-- Bluetooth -->
    <string name="bluetooth_not_connected">You are not connected to a device</string>
    <string name="bluetooth_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="bluetooth_title_connecting">connecting...</string>
    <string name="bluetooth_title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="bluetooth_title_not_connected">not connected</string>
    <string name="bluetooth_online">On-Line</string>
    <string name="bluetooth_offline">Off-Line</string>

    <!-- Bluetooth Connect Activity -->
    <string name="bluetooth_scanning">scanning for devices...</string>
    <string name="bluetooth_select_device">select a device to connect</string>
    <string name="bluetooth_none_paired">No devices have been paired</string>
    <string name="bluetooth_none_found">No devices found</string>
    <string name="bluetooth_title_paired_devices">Paired Devices</string>
    <string name="bluetooth_title_other_devices">Other Available Devices</string>
    <string name="bluetooth_button_scan">Scan for devices</string>

    <!-- Change Password Fragment -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_repeat">Repeat New Password</string>

    <!-- ID Cancellation Fragment -->
    <string name="id_cancellation_agree">I want to erase my account</string>

    <!-- Sensor Information Fragment -->
    <string name="sensor_type">Type : </string>
    <string name="sensor_address">Address : </string>
    <string name="sensor_status">Status : </string>
    <string name="sensor_register">Register</string>
    <string name="sensor_deassociation">Deassociation</string>
    <string name="sensor_air">Air Pollution Sensor</string>
    <string name="sensor_heart">Heart Sensor</string>

    <!-- Bluetooth Connect Activity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
</resources>