<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.x01_drawer.MainActivity" >

    <item
        android:id="@+id/menuRealTimeData"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_real_time_data" />

    <item
        android:id="@+id/menuSensorInformation"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_sensor_information" />

    <item
        android:id="@+id/menuPreviousData"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_previous_data" />

    <item
        android:id="@+id/menuChangePassword"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_change_password" />

    <item
        android:id="@+id/menuIDCancel"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_id_cancel" />
</menu>